# wechat-auth

./: README.md  prd.md
backend/: .env.example  main.py  pyproject.toml
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: wechat.py
backend/app/core/: config.py
backend/app/schemas/: wechat.py
backend/app/services/: wechat.py
frontend/: .env.example  index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/components/ui/: button.tsx
